<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="200dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            app:boxBackgroundColor="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/whatsapp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:contentDescription="@string/enter"
        app:backgroundTint="@color/success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/telegram_btn"
        app:layout_constraintTop_toBottomOf="@+id/input_layout"
        app:srcCompat="@drawable/whatsapp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/clear"
        app:backgroundTint="@color/danger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/paste_btn"
        app:layout_constraintTop_toTopOf="@+id/paste_btn"
        app:srcCompat="@drawable/ic_baseline_clear_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/paste_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:clickable="true"
        android:contentDescription="@string/paste"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toStartOf="@+id/clear_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telegram_btn"
        app:srcCompat="@drawable/ic_baseline_content_paste_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paste"
        app:layout_constraintEnd_toEndOf="@+id/paste_btn"
        app:layout_constraintStart_toStartOf="@+id/paste_btn"
        app:layout_constraintTop_toBottomOf="@+id/paste_btn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp"
        app:layout_constraintEnd_toEndOf="@+id/whatsapp_btn"
        app:layout_constraintStart_toStartOf="@+id/whatsapp_btn"
        app:layout_constraintTop_toBottomOf="@+id/whatsapp_btn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="@+id/clear_btn"
        app:layout_constraintStart_toStartOf="@+id/clear_btn"
        app:layout_constraintTop_toBottomOf="@+id/clear_btn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/change_language_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        android:contentDescription="@string/change_language"
        app:backgroundTint="@color/gray_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_language_24"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        app:layout_constraintEnd_toEndOf="@+id/change_language_btn"
        app:layout_constraintStart_toStartOf="@+id/change_language_btn"
        app:layout_constraintTop_toBottomOf="@+id/change_language_btn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/telegram_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/telegram"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/whatsapp_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout"
        app:srcCompat="@drawable/telegram" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telegram"
        app:layout_constraintEnd_toEndOf="@+id/telegram_btn"
        app:layout_constraintStart_toStartOf="@+id/telegram_btn"
        app:layout_constraintTop_toBottomOf="@+id/telegram_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>